# RayTracer

./: .gitignore  CMakeLists.txt  README.txt
resources/: RSCornell.pov  balls2.pov  bunny.pov  coolthree.pov  cooltwo.pov  gnarly.pov  multilights.pov  my_scene1.pov  my_scene2.pov  planes.pov  recurse_simp2.pov  recurses.pov  refract2.txt  schlick1.pov  simp_cam.pov  simp_cam1.pov  simple-gi.pov  simple.pov  simple_box.pov  simple_reflect1.pov  simple_tri.pov  spheres.pov  tree.pov  valentine2.pov
src/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h  BlinnPhongShader.cpp  BlinnPhongShader.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Image.h  LambertianShader.cpp  LambertianShader.h  Light.cpp  Light.h  Parser.cpp  Parser.h  RTBox.cpp  RTBox.h  RTIntersectObject.cpp  RTIntersectObject.h  RTObject.cpp  RTObject.h  RTPlane.cpp  RTPlane.h  RTSphere.cpp  RTSphere.h  RTTriangle.cpp  RTTriangle.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
